alignment fixes

--- a/portfolio-site/src/AppMobile.css
+++ b/portfolio-site/src/AppMobile.css
@@ -187,6 +187,7 @@
 .Body-content h1 {
     font-size: 2.6em;
     text-align: center;
+    color: purple;
 }
 
 .Github {
@@ -344,16 +345,16 @@
     font-size: 2.75rem;
     cursor: pointer;
     z-index: 10;
+    color: black;
 }
 
 .Project-info-m {
     width: 80vw !important;
-    justify-self: center;
-    align-self: center;
     margin-top: 8em;
     font-family: Menlo, sans-serif;
     font-size: 0.8em;
     line-height: 1.75em;
+    transform: translateX(12%);
 }
 
 
