--- a/portfolio-site/src/utils/Project-page.css
+++ b/portfolio-site/src/utils/Project-page.css
@@ -77,6 +77,7 @@
     margin-top: 25vh;
     pointer-events: auto;
     cursor: default;
+    color: purple;
   }
 
   .Arrow {
